# CCleaner

./: .gitignore  LICENSE  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fsutil.rs  main.rs  targets.rs  win.rs
ui/: index.html
