[package]
name = "cclean"
version = "0.1.0"
edition = "2021"
description = "C 盘清理工具（个人使用）"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
walkdir = "2"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_Storage_FileSystem"] }
